Update 2, listing page

--- a/auctions/templates/auctions/createlisting.html
+++ b/auctions/templates/auctions/createlisting.html
@@ -5,7 +5,9 @@ Create Listing
 {% endblock %}
 
 {% block body %}
+
 <table>
+   {{message}}
    <form action="{% url 'createlisting' %}" method=POST>
       {% csrf_token %}
       {{form}}
