--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -2,16 +2,26 @@
 
 {% block body %}
     <h2>Active Listings</h2>
+    <hr />
     {% for auction in auctions %}
       <div id=listing>
-         <h3>
-         {{auction.name}}
-         </h3>
-         <div>
-         {{auction.description}}
-         </div>
-         <img src="{{auction.url}}" width=300px>
-         {{auction.high_bid}}
+         <a href="{% url 'listingview' slug=auction.slug %}">
+            <h3>
+               {{auction.name}}
+            </h3>
+            <div>
+               {{auction.description}}
+            </div>
+            <img src="{{auction.url}}" width=300px>
+            <div id="highbid">
+               {% if auction.high_bid != None %}
+                  <strong>Current bid is:</strong> £{{auction.high_bid|floatformat:2}}
+               {% else %}
+                  <strong>The minimum bid for this auction is:</strong> £{{auction.minimumbid|floatformat:2}}
+               {% endif %}
+            </div>
+         </a>
+         <hr />
       </div>
    {% endfor %}
 {% endblock %}
