--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -1,9 +1,43 @@
-{% extends auctions/layout.html %}
+{% extends "auctions/layout.html" %}
 
 {% block title %}
-auction.name
+   {% for auction in auctions %}
+      {{auction.name}}
+   {% endfor %}
 {% endblock %}
 
 {% block body %}
-
+   {% for auction in auctions %}
+   <div id=listing>
+         <h3>
+            {{auction.name}}
+         </h3>
+         <div>
+            {{auction.description}}
+         </div>
+         <img src="{{auction.url}}" width=300px>
+         {% if auction.auctionclosed == True %}            
+            This auction has closed
+         {% else %}
+            <div id="highbid">
+               {% if auction.high_bid != None %}
+                  <strong>Current bid is:</strong> £{{auction.high_bid|floatformat:2}}
+               {% else %}
+                  <strong>The minimum bid for this auction is:</strong> £{{auction.minimumbid|floatformat:2}}
+               {% endif %}
+               <form action = "{% url 'listingview' auction.slug %}" method="POST">
+                  {% csrf_token %}
+                  <table>
+                     <tr>
+                        <th><label for="id_Bid">Place Bid:</label></th>
+                        <td><input type="number" name="Bid" step="0.01" required id="id_Bid"></td>
+                        <td><input type="submit" value="Submit Bid"></td>
+                        <td>{{message}}</td>
+                     </tr>
+                  </table>
+               </form>
+            </div>
+         {% endif %}
+   </div>
+   {% endfor %}
 {% endblock %}
