--- a/auctions/templates/auctions/layout.html
+++ b/auctions/templates/auctions/layout.html
@@ -29,6 +29,10 @@
                   <a class="nav-link" href="{% url 'watchlist' %}">Watchlist</a>
                </li>
 
+               <li class="nav-item">
+                  <a class="nav-link" href="{% url 'categories' 'allcats' %}">Categories</a>
+               </li>
+
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
                 </li>
